// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="link link--link link--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> LinkInParagraphContext story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet,
   
  <a
    class="link link--link link--brand"
    href="https://go.czi.team/eds"
  >
    consectetur adipiscing elit
  </a>
  . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
  <a
    class="link link--link link--brand"
    href="https://go.czi.team/eds"
  >
    Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
  </a>
   
  Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
   
  <a
    class="link link--link link--brand"
    href="https://go.czi.team/eds"
  >
    vel pulvinar
  </a>
   
  euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
</div>
`;

exports[`<Link /> LinkNeutral story renders snapshot 1`] = `
<a
  class="link link--link link--neutral"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> LinkRightIcon story renders snapshot 1`] = `
<a
  class="link link--link link--brand"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      opens in a new tab
    </title>
    <path
      d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="link link--link link--brand exampleClassName"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="link link--link link--brand"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
